WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178253
"text/html" data is not exposed when dragging and dropping across origins
https://bugs.webkit.org/show_bug.cgi?id=178253
Summary
"text/html" data is not exposed when dragging and dropping across origins
Wenson Hsieh
Reported
2017-10-12 22:13:22 PDT
Test case: 1. Download
http://whsieh.github.io/examples/custom-pasteboard-data.html
to a local file and open it 2. Open
http://whsieh.github.io/examples/custom-pasteboard-data.html
in a separate window 3. Drag the "Custom Drag" element from one window to the other. Observed: "text/html" does not appear in the output area. Expected: "text/html" should be exposed.
Attachments
Patch
(44.96 KB, patch)
2017-10-12 23:02 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-10-12 22:14:22 PDT
In DataTransfer::setDataFromItemList(), we need to handle the case where the type is "text/html".
Radar WebKit Bug Importer
Comment 2
2017-10-12 22:19:59 PDT
<
rdar://problem/34971203
>
Wenson Hsieh
Comment 3
2017-10-12 23:02:22 PDT
Created
attachment 323640
[details]
Patch
Wenson Hsieh
Comment 4
2017-10-12 23:03:13 PDT
(Diff looks way bigger than the change really is due to renaming)
Wenson Hsieh
Comment 5
2017-10-12 23:46:55 PDT
Comment on
attachment 323640
[details]
Patch Thanks for the review!
WebKit Commit Bot
Comment 6
2017-10-13 00:14:33 PDT
Comment on
attachment 323640
[details]
Patch Clearing flags on attachment: 323640 Committed
r223278
: <
https://trac.webkit.org/changeset/223278
>
WebKit Commit Bot
Comment 7
2017-10-13 00:14:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug